syntax = "proto3";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.javainuse.user";
package users;

service UserService {
  rpc addUser(CreateUser) returns (GetUser);
  rpc editUser(User) returns (google.protobuf.Empty);
  rpc deleteUser(DeleteUser) returns (google.protobuf.Empty);
  rpc getAllUsers(google.protobuf.Empty) returns (UserList);
}
message DeleteUser {
  int32 userId = 1;
}
message User {
  int32 userId = 1;
  string username = 2;
  string password = 3;
  UserRole userRole = 4;
}

message CreateUser {
  string userName = 1;
  string password = 2;
  UserRole userRole = 3;
}

message GetUser {
  int32 userId = 1;
  string userName = 2;
  UserRole userRole = 3;
}

message UserList {
  repeated GetUser users = 1;
}

enum UserRole {
  INVENTORY_MANAGER = 0;
  WAREHOUSE_WORKER = 1;
}
